# r3mes_v1

./: .env.example  .gitignore  INTEGRATION_CONTRACT.md  Makefile  R3MES.md  R3MES_MASTER_PLAN.md  README.md  e2e_test_report.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  r3mes_konsolidasyon_plani.md  r3mes_sistem_analizi.md  start-all.sh  tsconfig.base.json  turbo.json
apps/ai-engine/: .env.example  .gitignore  Dockerfile.ai-engine  README.md  model_loader.py  package.json  pyproject.toml  requirements.txt
apps/ai-engine/docs/: ADAPTER_CACHE_AND_SWAP.md  LIVE_SMOKE.md  RUNBOOK.md
apps/ai-engine/r3mes_ai_engine/: __init__.py  __main__.py  app.py  gguf_adapter.py  hf_embeddings.py  hf_inference.py  hf_reranker.py  http_download.py  inference_errors.py  llama_bootstrap.py  proxy_service.py  runtime_profile.py  schemas_embeddings.py  schemas_openai.py  schemas_rerank.py  settings.py  state.py
apps/ai-engine/r3mes_ai_engine/routes/: __init__.py  chat.py  embeddings.py  rerank.py
apps/ai-engine/scripts/: pin_to_ipfs.py  smoke_ai_engine.py
apps/ai-engine/tests/: __init__.py  test_chat_completions.py  test_embeddings_route.py  test_error_shape_parity.py  test_http_download_retries.py  test_inference_errors.py  test_proxy_operational.py  test_rerank_route.py  test_smoke_script_helpers.py
docs/: GOLDEN_PATH_STARTUP.md  LOCAL_DEV.md  SINGLE_TEST_RUNTIME.md  ai_architecture.md  backend_architecture.md  blockchain_architecture.md  infrastructure_architecture.md
infrastructure/: ACTIVE_RUNTIME.md  BITNET_CHECKSUM_ARCHIVE.md  BITNET_L2_STACK.md  (+17 more)
(+648 files in other folders)
