[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r3mes-ai-engine"
version = "0.3.0"
description = "R3MES AI engine — FastAPI proxy for llama-server (Qwen GGUF + optional behavior LoRA)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "torch>=2.2",
  "transformers>=4.44",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["r3mes_ai_engine*"]

[tool.setuptools]
py-modules = ["model_loader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"
